modified:   Home.html modified:   tabla-estudiantes.html

--- a/Home.html
+++ b/Home.html
@@ -157,8 +157,7 @@
         </ul>
     </section>
 
-
-    
+<form>
     <div id=pop class="popup-home">
         <button id=hidepop , class="close-btn">X</button>
         <div class="form">
@@ -176,8 +175,7 @@
             </div> -->
         </div>
     </div>
-
-    </form>
+</form>
 
     
 
