--- a/tabla-estudiantes.html
+++ b/tabla-estudiantes.html
@@ -162,7 +162,7 @@
                     <div class="offset-3 col-6 text-end align-self-end">
                         <li>
                             <a href="#">
-                                <i class="fa-solid fa-user-plus add-user-diurno"></i>
+                                <i class="fa-solid fa-user-plus add-user-diurno" id="inicio"></i>
                             </a>
                         </li>
                     </div> 
@@ -191,6 +191,26 @@
             </tbody>
         </table>
     </div>
+
+    <form>
+        <div id=pop class="popup-home">
+            <button id=hidepop , class="close-btn">X</button>
+            <div class="form">
+                <h5 class="text-center">
+                    Elija el area en el que quiere realizar su matricula.
+                </h5>
+                <div class="form_element">
+                    <a href="matricula.html"><button>Sección Técnica diurna</button></a>
+                </div>
+                <div class="form_element">
+                    <a href="matricula_pn.html"><button>Plan Nacional</button></a>
+                </div> 
+                <!-- <div class="form_element">
+                    <a href="matricula_nocturno.html"><button>Sección Técnica nocturna</button></a>
+                </div> -->
+            </div>
+        </div>
+    </form>
    
     <script src="js/home-comands.js"></script>
     <script src="js/popup.js"></script>
