modified:   tabla-estudiantes.html

--- a/tabla-estudiantes.html
+++ b/tabla-estudiantes.html
@@ -194,7 +194,7 @@
 
     <form>
         <div id=pop class="popup-home">
-            <button id=hidepop , class="close-btn">X</button>
+            <button id=hidepop class="close-btn">X</button>
             <div class="form">
                 <h5 class="text-center">
                     Elija el area en el que quiere realizar su matricula.
