--- a/tabla-especialidades.html
+++ b/tabla-especialidades.html
@@ -33,7 +33,7 @@
     <ul class="nav_list">
         <li>
             <span class="tooltip">Inicio</span>
-            <a href="home.html">
+            <a href="Home.html">
                 <i class="fa-solid fa-house-chimney" id="home_btn"></i>
                 <span class="links_name" id="inicio">Inicio</span>
             </a>
