--- a/Home.html
+++ b/Home.html
@@ -150,9 +150,9 @@
             <li class="col-6 offset-lg-2 col-lg-2" role="button">
                 <a class="btn btn-primary btn-lg" id=inicio >Matrículas</a>
             </li>
-             <li class="col-6 col-lg-2">
-                <a class="btn btn-primary btn-lg" href="#">Reportes</a>
-            </li>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Reportes
+            </button>
         </ul>
     </section>
 
