--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="resources/ctpplogo.ico" type="favicon/ico" />
     <!-- Bootstrap5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/82d23b5a3b.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -147,35 +150,38 @@
             <li class="col-12 col-lg-6">
                 <h2 class="mb-3 mb-lg-0 text-lg-center" id="saludo">Buenos días</h2>
             </li>
-            <li class="col-6 offset-lg-2 col-lg-2" role="button">
-                <a class="btn btn-primary btn-lg" id=inicio >Matrículas</a>
+            <li class="col-6" role="button">
+                <button class="btn btn-primary btn-lg"  type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Matrículas</button>
             </li>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Reportes
-            </button>
+
+<!--             <li class="col-6 col-lg-2">
+                <a class="btn btn-primary btn-lg" href="#">Reportes</a>
+            </li> -->
         </ul>
     </section>
 
-<form>
-    <div id=pop class="popup-home">
-        <button id=hidepop , class="close-btn">X</button>
-        <div class="form">
-            <h5 class="text-center">
-                Elija el area en el que quiere realizar su matricula.
-            </h5>
-            <div class="form_element">
-                <a href="matricula.html"><button>Sección Técnica diurna</button></a>
-            </div>
-            <div class="form_element">
-                <a href="matricula_pn.html"><button>Plan Nacional</button></a>
-            </div> 
-            <!-- <div class="form_element">
-                <a href="matricula_nocturno.html"><button>Sección Técnica nocturna</button></a>
-            </div> -->
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5 text-center" id="staticBackdropLabel">Elija el area en el que quiere realizar su matricula</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-body row">
+            <div class="form_popup col-12 text-center m-2">
+                <a href="matricula.html" class="btn btn-primary d-block">Sección Técnica diurna</a>
+            </div>
+            <div class="form_popup col-12 text-center m-2">
+                <a href="matricula_pn.html" class="btn btn-primary d-block">Plan Nacional</a>
+            </div> 
+            <div class="form_popup col-12 text-center m-2">
+                <a href="matricula_nocturno.html" class="btn btn-primary d-block">Sección Técnica nocturna</a>
+            </div>
+        </div>
+      </div>
     </div>
-</form>
-
+  </div>
     
 
     <!-- Fin del inicio del saludo al usuario -->
